istio/meeting-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meeting-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meeting-v1
spec:
  hosts:
  - "*"
  gateways:
  - meeting-gateway
  http:
  - match:
    - uri:
        exact: /meeting
    route:
    - destination:
        host: meeting-v1
        port:
          number: 3000
