istio/worker-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: worker-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: worker-v1
spec:
  hosts:
  - "*"
  gateways:
  - worker-gateway
  http:
  - match:
    - uri:
        exact: "/work"
    route:
    - destination:
        host: worker-v1
        port:
          number: 4000
